--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["redis", "CLIENT LIST", "IP"],
+  "keywords": [
+    "redis",
+    "CLIENT LIST",
+    "IP"
+  ],
   "author": "Diamondlord",
   "repository": {
     "type": "git",
