--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "license": "ISC",
   "dependencies": {
-    "ioredis": "^4.28.4",
-    "yargs": "^17.3.1"
+    "ioredis": "5.4.1",
+    "yargs": "17.7.2"
   },
   "bin": "./index.js"
 }
